feat: Adăugare Captcha la logare, notificare prin e-mail, sms(viitor) către cetățeni cu privire la starea sesizării